# HolyShield2025_challenges

./: README.md
Mobile/HolyAutoTapper/solve/: WriteUp.docx  decrpyt_tool.py  dump_decrypt_lua.js
Pwn/AvoTapo/chal/: docker-compose.yml
Pwn/AvoTapo/server/: docker-compose.yml
Pwn/AvoTapo/solve/: hack_chall.py  http_server.py  solver.md  vuln.md
Pwn/Buffer_One_Flow/chall/: Dockerfile
Pwn/Buffer_One_Flow/server/: chall  chall.c  flag
Pwn/Buffer_One_Flow/solve/: solve.md  solve.py
Pwn/Do_you_know_v8/chall/: Dockerfile  flag
Pwn/Do_you_know_v8/exploit/: writeup.md
Pwn/Do_you_know_v8/server/: docker-compose.yml  flag  flag_reader
RPC/Malware/solve/: Malware.md
RPC/Penetration Test/chall/: README.md  docker-compose.yml
RPC/Penetration Test/solve/: solve.md
Rev/HomewoRC Heist/chall/: 2025_RealRealFinalHomewoRC.docx.enc
Rev/HomewoRC Heist/server/: 2025_RealRealFinalHomewoRC.docx  HomeworkHeist.sln  build.bat  build_masterKey.py
Rev/HomewoRC Heist/solve/: solve.py
Rev/Rusty Protocol/server/: solver.md
Rev/Rusty Protocol/server/grpc_challenge_server/: Cargo.toml  build.rs
Rev/Rusty Protocol/server/grpc_challenge_server/proto/: secret.proto.txt
Rev/Rusty Protocol/server/grpc_challenge_server/src/: main.rs
Rev/Rusty Protocol/server/grpc_challenge_server/src/server/: mod.rs  secret_provider.rs  session.rs  verify.rs
Rev/Rusty Protocol/solve/: custom_Base58.py  custom_Cham-Ctf.py  custom_chacha20.py  solve.txt
Rev/VM/server/: holy.c
crypto/: README.md
crypto/HSpace Satellite/: challenge.yml
crypto/oracle/: README.md  challenge.yml
(+223 files in other folders)
