[package]
name = "grpc_challenge_server"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
once_cell = "1.19"

[build-dependencies]
tonic-build = "0.11"

[features]
default = ["server"]
server = []

[profile.release]
opt-level = 0
lto = false
codegen-units = 16
panic = "abort"
strip = false
debug = 2